Chapter 3 — Listing 3.11: PersonRecord.java Demonstrates: records as immutable data carriers with custom instance methods